Fix: Text overlap on p2e_ruler when text size is big

--- a/generator/css/cards.css
+++ b/generator/css/cards.css
@@ -251,7 +251,7 @@
     width: 100%;
     height: 1.0mm;
     margin-top: 0;
-    margin-bottom: -0.5em;
+    margin-bottom: 0;
 }
 
 .card-box {
